# sst-data

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  bench2.py
benchmark/csv/: CMakeLists.txt  bench1_csv.py  bench2_csv.py  bench3_csv.py
benchmark/sqlite/: CMakeLists.txt  bench1_sqlite.py  bench2_sqlite.py  bench3_sqlite.py
scripts/: test_undefined_symbols.sh  uninstall.sh
src/test/: Makefile  README.md  statOutputTest.cc  statOutputTest.h  test.py
ssdata/include/: CMakeLists.txt
sstdata/: CMakeLists.txt
sstdata/include/: CMakeLists.txt  sstdata.h  statArrow.h  statSQLLite.h
sstdata/src/: CMakeLists.txt  statArrow.cc  statSQLLite.cc
test/: CMakeLists.txt  test.py  test1.py  test2.py  test3.py
